--- a/src/ABC/IsystemBundle/Resources/views/AbcMembers/editStudent.html.twig
+++ b/src/ABC/IsystemBundle/Resources/views/AbcMembers/editStudent.html.twig
@@ -1,16 +1,18 @@
 {% extends "ABCIsystemBundle::layoutAdmin.html.twig" %}
 {% block title %} Student Edit {% endblock %}
-{% block scripthead %}
+
+{% block css%}
 <link href="{{ asset('Resources/datepicker/css/datepicker.css') }}" rel="stylesheet" media="all">
 <link href="{{ asset('Resources/css/jquery.Jcrop.css') }}" rel="stylesheet" media="all">
 <link href="{{ asset('Resources/css/custom.css') }}" rel="stylesheet" media="all">
+{% endblock %}
+{% block js %}
 <script src="{{ asset('Resources/js/bootstrap-dropdown.js') }}"></script>
 <script src="{{ asset('Resources/datepicker/js/bootstrap-datepicker.js') }}" charset="UTF-8"></script>
-<script src="{{ asset('Resources/js/isystem/isystem.js') }}" charset="UTF-8"></script>
-<script src="{{ asset('Resources/js/bootstrap-tooltip.js') }}"></script>
-<script src="{{ asset('Resources/js/pekeUpload.js') }}"></script>
-<script src="{{ asset('Resources/js/jquery.Jcrop.js') }}"></script>
-<script src="{{ asset('Resources/js/jquery.color.js') }}"></script>
+<script src="{{ asset('Resources/js/photo/pekeUpload.js') }}"></script>
+<script src="{{ asset('Resources/js/photo/jquery.Jcrop.js') }}"></script>
+<script src="{{ asset('Resources/js/photo/jquery.color.js') }}"></script>
+<script src="{{ asset('Resources/js/photo/fn_photos.js') }}"></script>
 {% endblock %}
 
 
@@ -75,103 +77,15 @@ $(document).ready(function(){
         todayBtn: 'linked',
         viewMode: 'years'
     }); 
-        
-    $("#file").pekeUpload({
-        theme:'bootstrap', 
-        allowedExtensions:"jpeg|jpg|png|gif", 
-        url:  '/abcis/web/upload.php?user_id={{member.idCard}}&folder={{memberType}}&subfolder={{memberGroup}}',
-        onFileSuccess: function(file,data){ 
-            var ext = file.name.split('.').pop();           
-            $('.modal-body').html('<center><img id="target" src="/abcis/web/photos/{{memberType}}/{{memberGroup}}/'+file.name+'"></center><br><br>');
-            $('#myModal').modal('show');
-            $('#myModal').css({
-                  width:'800px',
-                  height:'auto',
-		  'margin-left': function () {
-		  return -($(this).width() / 2 );
-		  }
-             });
-            
-             var api;
-             $('#target').Jcrop({
-                   // start off with jcrop-light class
-                   bgOpacity: 0.5,
-                   bgColor: 'white',
-                   addClass: 'jcrop-light',
-                   allowResize: false,
-                   onSelect: updateCoords
-              },function(){
-                    api = this;
-                    api.setSelect([160, 10, 480, 430]);
-                    //api.setSelect([0, 0, 320, 380]);
-                    api.setOptions({ bgFade: true });
-                    api.ui.selection.addClass('jcrop-selection');
-              });
-              $('#icrop').click(function() {
-                   $.post("/abcis/web/crop.php", { 
-                                x:$("#x").val(),
-                                y:$("#y").val(),
-                                w:$("#w").val(),
-                                h:$("#h").val(),
-                                user_id:$("#user_id").val(),
-                                img: file.name,
-                                folder: '{{memberType}}',
-                                subfolder: '{{memberGroup}}'
-                            }).done(function(data) {
-			    $('#myModal').modal('hide');
-		    });
-                    setTimeout(function(){
-                     $('#imgMember').html('');
-                     $('#imgMember').html('<img class="img-polaroid" width="120" height="180" src="/abcis/web/photos/{{memberType}}/{{memberGroup}}/{{member.idCard}}.'+ext+'"><br>');
-                    }, 2000);
-              });
-            
-              $('#buttonbar').on('click','button',function(e){
-                    var $t = $(this), $g = $t.closest('.btn-group');
-                    $g.find('button.active').removeClass('active');
-                    $t.addClass('active');
-                    $g.find('[data-setclass]').each(function(){
-                    var $th = $(this), c = $th.data('setclass'),
-                    a = $th.hasClass('active');
-                    if (a) {
-                        api.ui.holder.addClass(c);
-                        switch(c){
-                          case 'jcrop-light':
-                              api.setOptions({ bgColor: 'white', bgOpacity: 0.5 });
-                              break;
-                          case 'jcrop-dark':
-                              api.setOptions({ bgColor: 'black', bgOpacity: 0.4 });
-                              break;
-                          case 'jcrop-normal':
-                              api.setOptions({
-                              bgColor: $.Jcrop.defaults.bgColor,
-                              bgOpacity: $.Jcrop.defaults.bgOpacity
-                         });
-                         break;
-                        }
-                      }
-                      else api.ui.holder.removeClass(c);
-                     });
-              });
-                },
-        onFileError:function(file,error){
-             alert("error on file: "+file.name+" error: "+error+"");
-            }
-        });
-     });
-  function updateCoords(c)
-  {
-    $('#x').val(c.x);
-    $('#y').val(c.y);
-    $('#w').val(c.w);
-    $('#h').val(c.h);   
-  }
+    uploadPhoto(
+            "#file",
+            '{{member.idCard}}',
+            '{{memberType}}',
+            '{{memberGroup}}',
+            '{{path('isystem_upload',{'idcard':member.idCard ,'folder': memberType,'subfolder':memberGroup})}}',
+            '{{path('isystem_crop')}}'
+     );    
 
-  function checkCoords()
-  {
-    if (parseInt($('#w').val())) return true;
-    alert('Please select a crop region then press submit.');
-    return false;
-  }
+     });
 </script>
 {% endblock %}   
