--- a/src/ABC/IsystemBundle/Resources/views/AbcLayout/alert.html.twig
+++ b/src/ABC/IsystemBundle/Resources/views/AbcLayout/alert.html.twig
@@ -1,4 +1,4 @@
-<div class="alert alert-success">
+<div class="alert alert-success" style="display:none">
 <button type="button" class="close" data-dismiss="alert">&times;</button>
 <h4>{{header}}</h4>
 {{message}}
