ABCIS Admission Add Backend Ricardo

--- a/src/ABC/AdmissionBundle/Resources/views/Applicant/applicant.html.twig
+++ b/src/ABC/AdmissionBundle/Resources/views/Applicant/applicant.html.twig
@@ -18,7 +18,7 @@
     </ul>
    <div class="tab-content">
       <div class="tab-pane active" id="personal_data">
-          {%include 'ABCAdmissionBundle:Applicant:personalData.html.twig'%}
+          {%include 'ABCAdmissionBundle:ApplicantSteps:personalData.html.twig'%}
       </div>
       <div class="tab-pane" id="school_information">
           
@@ -27,7 +27,7 @@
           
       </div>
       <div class="tab-pane" id="contact_information">
-          {%include 'ABCAdmissionBundle:Applicant:contactInformation.html.twig'%}
+          {%include 'ABCAdmissionBundle:ApplicantSteps:contactInformation.html.twig'%}
       </div>
    </div>      
    </div> 
