--- a/src/ABC/AdmissionBundle/Resources/views/ApplicantAdmin/edit.html.twig
+++ b/src/ABC/AdmissionBundle/Resources/views/ApplicantAdmin/edit.html.twig
@@ -1,9 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends "ABCAdmissionBundle::layout.html.twig" %}
 
 {% block body -%}
     <h1>Applicant edit</h1>
 
-    <form action="{{ path('abcis_admission_applicant_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+    <form action="{{ path('admission_admin_applicant_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
         <p>
@@ -13,12 +13,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('abcis_admission_applicant') }}">
+        <a href="{{ path('admission_admin_applicant') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <form action="{{ path('abcis_admission_applicant_delete', { 'id': entity.id }) }}" method="post">
+        <form action="{{ path('admission_admin_applicant_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
             <button type="submit">Delete</button>
